more work on cloning instructions

--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -5,11 +5,9 @@
 ottrpal::set_knitr_image_path()
 ```
 
-# Set Up
+# Set Up Your Computer
 
 Welcome!  This lab will introduce you to some basic data analysis using the [R programming language](https://www.r-project.org/).  In order to do this, there are a few steps you need to complete so that you can access the material.
-
-## Set Up Your Computer
 
 In order to run your analyses, you will use the [AnVIL cloud computing platform](https://anvilproject.org/), so that you do not need to install everything on your own computer.  The AnVIL (Analysis Visualization and Informatics Lab-space) platform is specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
 
@@ -20,7 +18,7 @@ In order to run your analyses, you will use the [AnVIL cloud computing platform]
 - AnVIL uses [Terra](https://anvil.terra.bio/) to provide many computational tools useful for biological data analysis, such as [RStudio](https://www.rstudio.com/products/rstudio/), [Galaxy](https://usegalaxy.org/), and [Jupyter Notebooks](https://jupyter.org/).  Terra takes care of installing these tools on Google's computers, so that you can just start using them.
 :::
 
-### Create Google Account
+## Create Google Account
 
 First, you will need to set up a (free) Google account.
 
@@ -28,7 +26,7 @@ If you do not already have a Google account that you would like to use for acces
 
 - Alternatively, if you would like to create a Google account that is associated with an existing non-Gmail email address, you can follow [these instructions](https://support.terra.bio/hc/en-us/articles/360029186611).
 
-### Log In to Terra
+## Log In to Terra
 
 Next, make sure you can log in to Terra -- you will use Terra to perform computations on AnVIL. 
 
@@ -41,7 +39,7 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1tyt8ifxD3y7QW3nN
 
 Open Terra, and you should be prompted to sign in with your Google account.
 
-### Share username
+## Share username
 
 Finally, make sure your instructor has your Google account username (e.g. `myname@gmail.com`), so they can give you access to everything you need.
 
@@ -52,7 +50,7 @@ Finally, make sure your instructor has your Google account username (e.g. `mynam
 It is *very important* that you share the Google account you will be using to access AnVIL with with your instructor! Otherwise, the instructor cannot add you to billing projects or Workspaces, and you will be unable to proceed with your assignments.
 :::
 
-## Access Materials
+# Access Materials
 
 Next you will need to access the required materials and software.
 
@@ -62,25 +60,23 @@ workspace_link <- "Workspace_link"
 billing_project <- "provided by your Instructor"
 ```
 
-On AnVIL, you access files and computers through **Workspaces**.  
-
-Each Workspace functions almost like a mini code laboratory - it is a place where data can be examined, stored, and analyzed. The first thing we want to do is to copy or “clone” a Workspace to create a space for you to experiment.  This will give you access to
+On AnVIL, you access files and computers through **Workspaces**.  Each Workspace functions almost like a mini code laboratory - it is a place where data can be examined, stored, and analyzed. The first thing we want to do is to copy or “clone” a Workspace to create a space for you to experiment.  This will give you access to
 
 - the files you will need (data, code)
 - the computing environment you will use
 
 :::{.warning}
-*This **will not work** until your instructor has given you permission to spend money to "rent" the computers that will power your analyses.*
+This **will not work** until your instructor has given you permission to spend money to "rent" the computers that will power your analyses, (by adding you to a "Billing Project").
 :::
 
 To clone an AnVIL Workspace:
 
 1. Open Terra - use a web browser to go to [`anvil.terra.bio`](https://anvil.terra.bio/)
 
-    :::{.notice}
+:::{.notice}
     **Tip**
     At this point, it might make things easier to open up a new window in your browser and split your screen. That way, you can follow along with this guide on one side and execute the steps on the other.
-    :::
+:::
 
 1. In the drop-down menu on the left, navigate to "Workspaces". Click the triple bar in the top left corner to access the menu. Click "Workspaces".
 
@@ -100,19 +96,46 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WR
     ```{r, echo=FALSE, fig.alt='Screenshot of Terra "MY WORKSPACES" menu. The "MY WORKSPACES" tab is highlighted. No Workspaces are visible because none have been shared with the user. There is an option to create a new Workspace.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_0")
     ```
-    a. Otherwise, select the “Public” tab.  In the top search bar type the name of the workspace \“`r workspace_name`\”.
+    b. Otherwise, select the “Public” tab.  In the top search bar type the name of the workspace \“`r workspace_name`\”.
 
     ```{r, echo=FALSE, fig.alt='Screenshot of Terra "My Workspaces" menu. The "FEATURED" tab is highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_144")
     ```
-    a. You can also go directly to the workspace by clicking this link: `r workspace_link`.
+    c. You can also go directly to the workspace by clicking this link: `r workspace_link`.
     
 1. Clone the workspace by clicking the teardrop button (![teardrop button](resources/images/teardrop.png){#id .class width=25 height=20px}). Select “Clone”.
 
-```{r, echo=FALSE, fig.alt='Screenshot showing the teardrop button. The button has been clicked revealing the "clone" option. The Clone option and the teardrop button are highlighted.'}
+    ```{r, echo=FALSE, fig.alt='Screenshot showing the teardrop button. The button has been clicked revealing the "clone" option. The Clone option and the teardrop button are highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/182AOzMaiyrreinnsRX2VhH7YsVgvAp4xtIB_7Mzmk6I/edit#slide=id.ged15532ded_0_625")
-```
+    ```
+
+1. You will see a popup box appear, asking you to configure your Workspace
+    a. Give your Workspace clone a name by adding an underscore (“_”) and your name. For example, \“`r paste0(workspace_name, "_First_Last)\”.
+    a. Select the Billing project `r billing_project`.
+    a. Leave the bottom two boxes as-is
+    a. click “CLONE WORKSPACE”.
     
+    ```{r, echo=FALSE, fig.alt='Screenshot showing the "clone a workspace" popout. The Workspace name, Billing Project, and Clone Workspace button have been filled in and highlighted.'}
+ottrpal::include_slide("https://docs.google.com/presentation/d/182AOzMaiyrreinnsRX2VhH7YsVgvAp4xtIB_7Mzmk6I/edit#slide=id.ged15532ded_0_648")
+    ```
+
+1. The new Workspace should now show up under "My Workspaces".  You now have your own copy of the Workspace to work in.
+    
+-----
+
+    
+1. Use the search box to find the Workspace you want to clone.
+
+    ```{r, echo=FALSE, fig.alt='Screenshot of Terra "My Workspaces" menu. The search bar is highlighted and the user has typed in the term "COVID-19". A Workspace related to COVID-19 appears in the results.'}
+ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_288")
+    ```
+    
+1. Click the teardrop button on the far right next to the Workspace you want to clone.
+
+    ```{r, echo=FALSE, fig.alt='Screenshot of Terra "My Workspaces" menu with the Workspace that we want to clone. The teardrop button has been clicked to bring up the options. The "Clone" option from the list is highlighted.'}
+ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_432")
+    ```
+
 -----
 
 1. Click on the name of a Workspace to open it.  Opening and viewing a Workspace does not cost anything.
@@ -126,46 +149,6 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WR
     ```{r, echo=FALSE, fig.alt='Screenshot of a Terra Workspace.  The "Dashboard" is highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1ioYY0n3CcrP934WRKEsQ1aKocPqfswdWWHxYCf76BCg/edit#slide=id.g10f3888d99c_0_170")
     ```
-
------
-
-    
-1. Use the search box to find the Workspace you want to clone.
-
-    ```{r, echo=FALSE, fig.alt='Screenshot of Terra "My Workspaces" menu. The search bar is highlighted and the user has typed in the term "COVID-19". A Workspace related to COVID-19 appears in the results.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_288")
-    ```
-    
-1. Click the teardrop button on the far right next to the Workspace you want to clone. Click "Clone". You can also clone the Workspace from the Workspace Dashboard instead of the search results.
-
-    ```{r, echo=FALSE, fig.alt='Screenshot of Terra "My Workspaces" menu with the Workspace that we want to clone. The teardrop button has been clicked to bring up the options. The "Clone" option from the list is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_432")
-    ```
-    ```{r, echo=FALSE, fig.alt='Screenshot of the Dashboard for the Workspace that we want to clone. The teardrop button has been clicked to bring up the options. The "Clone" option from the list is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_577")
-    ```
-    
-1. You will see a popup box appear. Name your Workspace and select the appropriate Terra Billing Project.  **All activity in the Workspace will be charged to this Billing Project** (regardless of who conducted it). Remember that each Workspace should have its own Billing Project.
-
-    ```{r, echo=FALSE, fig.alt='Screenshot of the "clone workspace" Terra popup dialog box. The Workspace name and Billing Project dropdown are highlighted. Text has been filled in for the Workspace name as "Lab-member-1-workspace-2".'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_722")
-    ```
-    
-1. Click "CLONE WORKSPACE".  The new Workspace should now show up under your Workspaces.
-
-    ```{r, echo=FALSE, fig.alt='Screenshot of Terra popup dialog box for creating a new Workspace. The "Clone Workspace" button is highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/1JvfOluHe543cUCyyH3zz0ew-1J1QjhdYGZufW9NrC_M/edit#slide=id.g117abafa453_0_1012")
-    ```
-
-
-
------
-
-In the first box, give your Workspace clone a name by adding an underscore (“_”) and your name. For example, \“`r paste0(workspace_name, "_First_Last)\”. Next, select the Billing project provided by your instructor. Leave the bottom two boxes as-is and click “CLONE WORKSPACE”.
-
-```{r, echo=FALSE, fig.alt='Screenshot showing the "clone a workspace" popout. The Workspace name, Billing Project, and Clone Workspace button have been filled in and highlighted.'}
-ottrpal::include_slide("https://docs.google.com/presentation/d/182AOzMaiyrreinnsRX2VhH7YsVgvAp4xtIB_7Mzmk6I/edit#slide=id.ged15532ded_0_648")
-```
 
 # Introduction
 
