--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -30,7 +30,7 @@ If you do not already have a Google account that you would like to use for acces
 
 Next, make sure you can log in to Terra -- you will use Terra to perform computations on AnVIL. 
 
-You can access Terra by going to [`anvil.terra.bio`](https://anvil.terra.bio/), or by clicking the link on the AnVIL home page ([`anvilproject.org`](https://anvilproject.org/)).
+You can access Terra by going to [`anvil.terra.bio`](https://anvil.terra.bio/), or by clicking the link on the [AnVIL home page](https://anvilproject.org/).
 
 
 ```{r, echo=FALSE, fig.alt='Screenshot of the AnVIL home page. The button to "launch Terra" is highlighted.'}
