--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -33,7 +33,7 @@ if (!exists("workspace_name")) {
   workspace_name <- "specified by your instructor"
   clone_name <- paste0("workspace_name", "_first_last")
 } else {
-  clone_name <- paste0(workspace_name, "_first_last")
+  clone_name <- paste0(workspacename, "_firstname_lastname")
 }
 
 if (!exists("workspace_link")) {
@@ -46,7 +46,7 @@ if (!exists("billing_project")) {
 ```
 
 :::{.warning}
-This **will not work** until your instructor has given you permission to spend money to "rent" the computers that will power your analyses, (by adding you to a "Billing Project").
+This **will not work** until your instructor has given you permission to spend money to "rent" the computers that will power your analyses (by adding you to a "Billing Project").
 :::
 
 On AnVIL, you access files and computers through **Workspaces**.  Each Workspace functions almost like a mini code laboratory - it is a place where data can be examined, stored, and analyzed. The first thing we want to do is to copy or “clone” a Workspace to create a space for you to experiment.  This will give you access to
