try adding teardrop

--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -88,7 +88,7 @@ ottrpal::include_slide("https://docs.google.com/presentation/d/1a5Da6qX9BG7Q_6XA
     ```
     c. You can also go directly to the Workspace by clicking this link: `r workspace_link`.
     
-1. Clone the workspace by clicking the teardrop button (![teardrop button](resources/images/teardrop.png){#id .class width=25 height=20px}). Select "Clone".  Or, if you have opened the Workspace, you can find the teardrop button on the top right of the Workspace.
+1. Clone the workspace by clicking the teardrop button (![teardrop button]([resources/images/teardrop.png](https://raw.githubusercontent.com/jhudsl/AnVIL_Template/student-clone/child/child_assets/teardrop_button.png)){width=25 height=20px}). Select "Clone".  Or, if you have opened the Workspace, you can find the teardrop button on the top right of the Workspace.
 
     ```{r, echo=FALSE, fig.alt='Screenshot showing the teardrop button. The button has been clicked revealing the "clone" option. The Clone option and the teardrop button are highlighted.'}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1a5Da6qX9BG7Q_6XAz7MvlDyWTvssm2hWwuo1WFJXb_0/edit#slide=id.g17144dbacd0_0_344")
