work on index.Rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,17 @@ favicon: assets/GDSCN_style/gdscn_favicon.ico
 
 This book is part of a series of books for the [The Genomic Data Science Community Network (GDSCN)](https://www.gdscn.org/home).  GDSCN is a group of educators gathered with the aim to bring genomic data science education to students at diverse institutions.
 
-## Summary
+## Skills Level {-} 
+
+::: {.notice}
+_Genetics_
+**Novice**: no genetics knowledge needed
+
+_Programming skills_
+**Novice**: no programming experience needed
+:::
+
+## Summary {-}
 
 In this exercise, students are introduced to the basics of R using the `swirl` package (https://swirlstats.com), which teach students R from within the R console.
 
@@ -26,31 +36,169 @@ This exercise is intended to be used either
 
 2. As an entry point for a more in-depth course or workshop.  In this case we recommend following up on important topics using additional resources (such as [R for Data Science](https://r4ds.had.co.nz/)).  The `swirl` lessons are great for letting students work through the basics in a "real" R environment where they get immediate feedback, but they are hard for students to refer back to later.  We find swirl most useful for giving students a first look at the big ideas, along with practice typing commands into the console.  This sets them up well for a more in-depth treatment over the subsequent course/workshop sessions.
 
-The `swirl` lessons cover several additional R commands and concepts beyond those mentioned in the learning objectives and provide a useful starting point for going deeper if you desire.  Additional `swirl` lessons can be found at the [`swirl` Course Network](http://swirlstats.com/scn/).
-
-## Skills Level {-} 
-
-::: {.notice}
-_Genetics_
-**Novice**: no genetics knowledge needed
-
-_Programming skills_
-**Novice**: no programming experience needed
-:::
+The `swirl` lessons cover several additional R commands and concepts beyond those mentioned in the learning objectives and provide a useful starting point for going deeper if you desire.  Additional `swirl` lessons can be found at the [swirl Course Network](http://swirlstats.com/scn/).
 
 ## Learning Goals {-}
 
-This activity addresses the following core competencies, as described by the associated societies and working groups:
+This activity addresses the following core concepts and competencies, as described by the associated societies and working groups:
 
 **Vision and Change**
 
-- competency 1
+Core Competencies:
+
+- Ability to use quantitative reasoning
+- Ability to tap into the interdisciplinary nature of science
 
 **Bioinformatics** (NIBLSE)
 
 - competency 1
 
 ## Audience and Context
+
+**Audience**  
+
+- Undergraduate biology majors
+- Graduate students with less exposure to bioinformatics
+
+**Prerequisites**  
+
+- Layman understanding of genetics (understanding of DNA, genes, trait inheritance)
+- Some previous exposure to the central dogma of molecular biology
+
+**Class Type**  
+
+- Lab (computer-based)
+- Homework for a Lecture
+
+**Class Size**  
+
+- 1-50
+
+**Lesson Duration**  
+
+<--
+- 20-30 minute pre-lab lecture 
+- 3 hour lab for undergraduate students
+- 1 hour lab for graduate students
+- Additional short lecture modules
+--->
+
+**Assessment Type**  
+
+- Short answer questions at each lab stage
+
+
+Course Level
+o	Introductory
+o	Upper Level
+o	Graduate
+o	High School
+o	Other
+
+Audience
+o	Life Sciences Major
+o	Physics or Engineering Major
+o	Non-Life Sciences Major
+o	Non-Physics/Engineering Major
+o	Non-Traditional Student
+o	2-year College
+o	4-year College
+o	University 
+o	Other
+
+Class Size
+o	1 – 50
+o	51 – 100
+o	101+
+
+Assessment Type
+o	Assessment of individual student performance
+o	Assessment of student groups/teams
+o	Assignment
+o	Exam/quiz, in class
+o	Exam/quiz, take home
+o	Homework
+o	Answer clicker-type question(s)
+o	Answer essay question(s)
+o	Answer fill in the blank question(s)
+o	Answer multiple choice question(s)
+o	Answer short answer questions(s)
+o	Answer true/false question(s)
+o	Create a concept map
+o	Create a diagram, drawing, figure, etc.
+o	Create a website
+o	Create graph, table etc. to present data
+o	Design an experiment or research study
+o	Design/present a poster
+o	Give an oral presentation
+o	Informal in-class report
+o	Interpret data
+o	Order items (e.g., strip sequence)
+o	Participate in discussion
+o	Peer evaluation
+o	Post-test
+o	Pre-test
+o	Produce a video or video response
+o	Respond to metacognition/reflection prompt
+o	Self-evaluation
+o	Solve problem(s)
+o	Written assignment: One minute paper
+o	Written assignment: Brochure
+o	Written assignment: Essay
+o	Written assignment: Figure/figure legend
+o	Written assignment: Lab report
+o	Written assignment: Literature review
+o	Other
+
+Lesson Length
+o	Portion of one class period
+o	One class period
+o	Multiple class periods
+o	One term (semester or quarter)
+o	One year
+o	Other
+
+Key Scientific Process Skills
+o	Reading research papers
+o	Reviewing prior research
+o	Asking a question
+o	Formulating hypotheses
+o	Designing/conducting experiments
+o	Predicting outcomes
+o	Gathering data/making observations
+o	Analyzing data
+o	Interpreting results/data
+o	Displaying/modeling results/data
+o	Communicating results
+
+Pedagogical Approaches
+o	Think-Pair-Share
+o	Brainstorming
+o	Case Study
+o	Clicker Question
+o	Collaborative Work
+o	One Minute Paper
+o	Reflective Writing
+o	Concept Maps
+o	Strip Sequence
+o	Computer Model
+o	Physical Model
+o	Interactive Lecture
+o	Pre/Post Questions
+o	Other 
+
+Bloom’s Cognitive Level (based on learning objectives & assessments)
+o	Foundational: factual knowledge & comprehension
+o	Application & Analysis
+o	Synthesis/Evaluation/Creation
+
+Principles of how people learn 
+o	Motivates student to learn material
+o	Focuses student on the material to be learned
+o	Develops supportive community of learners
+o	Leverages differences among learners
+o	Reveals prior knowledge
+o	Requires student to do the bulk of the work
 
 <!-- Learning objectives for this activity come from the [Genetics Core Competencies](https://genetics-gsa.org/education/genetics-learning-framework/): -->
 
